--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "ws": "^8.13.0",
-    "chess.js": "^1.0.0"
+    "chess.js": "^1.0.0",
+    "cors": "^2.8.5"
   }
 }
